--- a/html/statistics-for-data-science.html
+++ b/html/statistics-for-data-science.html
@@ -477,9 +477,9 @@
                     <p>The objective of a statistical hypothesis test is to: calculate a confidence interval assuming the null hypothesis is true; use the sample statistic to reject or fail to reject the null hypothesis. The null hypothesis is usually set as the common belief prior to the test, while the alternative hypothesis is what we want to prove by rejecting the null hypothesis. The practical reason for this approach is that it is a stronger result to reject the null than fail to reject it.</p>
                     <p>The steps of any hypothesis test are:</p>
                     <ol>
-                        <li>Formulate the null hypothesis and the alternative hypothesis.</li>
-                        <li>Specify the level of significance to be used.</li>
-                        <li>Select the test statistic.</li>
+                        <li>Formulate the null hypothesis and the alternative hypothesis, first in plain language and then using standard notation (e.g. H<sub>0</sub>: &mu; &le; 0; H<sub>A</sub>: &mu; &gt; 0).</li>
+                        <li>Specify &alpha; the level of significance to be used (most common: &alpha; = .05).</li>
+                        <li>Determine the appropriate test statistic to use.</li>
                         <li>Establish the critical value or values of the test statistic.</li>
                         <li>Determine the actual value of the test statistic.</li>
                         <li>Make a decision.</li>
