--- a/html/statistics-for-data-science.html
+++ b/html/statistics-for-data-science.html
@@ -484,6 +484,7 @@
                         <li>Determine the actual value of the test statistic.</li>
                         <li>Make a decision.</li>
                     </ol>
+                    <p>Hypothesis testing boils down to determining <span class="badge rounded-pill bg-secondary">how unusual our result would be</span> if our null hypothesis were true. We can quantify just how unusual it is using <span class="badge rounded-pill bg-secondary">p-value</span>. We can quantify the uncertainty in our model using <span class="badge rounded-pill bg-secondary">standard error</span> and <span class="badge rounded-pill bg-secondary">confidence intervals</span>, i.e. to let us know how good our model is.</p>
                     <p>There are three equivalent approaches to hypothesis testing:</p>
                     <ol>
                         <li><span class="badge rounded-pill bg-secondary">Critical value</span>: The sample statistic is more extreme than the critical value calculated from the significance level &alpha;</li>
